Fixed Checkout Overflow

--- a/css/checkout.css
+++ b/css/checkout.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 #shipping-container {
   padding: 40px;
 }
